networkpolicy/db-ingress.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: db-ingress
 namespace: default
spec:
 podSelector:
  matchLabels:
    app: postgres-postgresql
 ingress:
  - from:
     - podSelector:
        matchLabels:
         app: api-seed
    ports:
     - protocol: TCP
       port: 5432
