networkpolicy/logger-ingress.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: logger-ingress
 namespace: default
spec:
 podSelector:
  matchLabels:
    app: logger
 ingress:
  - from:
     - podSelector:
        matchLabels:
         app: api-seed
     - podSelector:
        matchLabels:
         app: postgres-postgresql
    ports:
     - protocol: TCP
       port: 514
